Fix contrast ratio for body text
The contrast ratio between the body text and background has been set to 4.5:1

--- a/assets/css/_feature.scss
+++ b/assets/css/_feature.scss
@@ -71,7 +71,7 @@
   margin: auto;
   width: 100%;
   height: 100%;
-  background: #111;
+  background: $backgroundColor;
   transform: scaleX(1);
   transition: transform 1s 0.5s;
   pointer-events: none;
